--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-src/ios/sbs-ios_5.12.1/ScanditBarcodeScanner.framework/ScanditBarcodeScanner filter=lfs diff=lfs merge=lfs -text
+# src/ios/sbs-ios_5.12.1/ScanditBarcodeScanner.framework/ScanditBarcodeScanner filter=lfs diff=lfs merge=lfs -text
+**/ScanditBarcodeScanner.framework/* filter=lfs diff=lfs merge=lfs -text
